# telugu

./: .gitignore  README.md  pyproject.toml  run_sensitivity.sh  timeline.ipynb
archive/beastling_xmls/: dravidian_4lang.xml  dravidian_4lang_prior.xml  dravidian_4lang_test.xml
archive/old_configs/: dravidian_test.conf
archive/unused_scripts/: analyze_test_results.py  create_nexus_final.py  fix_data_format.py  fix_namespace.py  inspect_data.py  prepare_data.py
config/: dravidian.conf
data/processed/: cognates_4lang_wide.csv  dravidian_4lang.nex  dravlex_4lang.csv
data/raw/: drav_cov_est_ucln_yule.xml
data/raw/2018_02_26_lingpy_analyses_for_RSOS_SI_ SI_robustness_cognate_coding/: DravLex.tsv  README.md  languages.csv  process.py
results/xml/: dravidian_beauti_full.xml  dravidian_beauti_test.xml  dravidian_loose_prior.xml  dravidian_medium_prior.xml  dravidian_tight_prior.xml
scripts/: analyze_full_results.py  cleanup_project.py  extract_4lang.py  final_analysis.py  generate_timeline_svg.py  sensitivity_analysis.py
