[project]
name = "telugu-project"
version = "0.1.0"
description = "A project for Telugu linguistic analysis"
dependencies = [
    "beastling>=1.5.1",
    "lingpy>=2.6.13",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "ruff>=0.14.2",
]
